Add script to packages.json to support manual restart-and-start command for seeing easier

--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server db.json -p 3001",
+    "server": "json-server --watch db.json --port 3001",
     "test": "vitest",
     "seed": "cp seed.json db.json",
     "start-server": "npx json-server --watch db.json --port 3001",
-    "reset": "npm run seed && npm run start-server"
+    "reset": "cp db.seed.json db.json",
+    "reset-and-start": "npm run reset && npm run server"
   },
   "eslintConfig": {
     "extends": [
